src/css/editor.css
/*Copyright (c) 2015 Oasiswork.
All Rights Reserved.

This Source Code Form is subject to the
terms of the Mozilla Public License, v. 2.0.
If a copy of the MPL was not distributed with this file,
You can obtain one at
http://mozilla.org/MPL/2.0/.*/

/* ==========================================================================
Sommaire

1 = Basic Style
2 = Layout
3 = Change class
4 = dtf catalog
5 = Image upload
6 = Dragabble
========================================================================== */

/* ==========================================================================
1 = Basic Style
========================================================================== */

body {
  font-family: sans-serif;
  -webkit-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
  transform-origin: 50% 0;
}

p { margin: 0; }

td { position: relative; }

.dblock { display: block; }

.dtable { display: table; }

.dtable-cell { display: table-cell; }

.first-hidden { display: none }

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

/*========== Buttons ===========*/

button {
  border: 0;
  padding: 1em 2em;
  cursor: pointer;
  display: inline-block;
  vertical-align: top;
  line-height: 1.5em;
  -webkit-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.button-add,
.button-del {
  color: white;
}

.button-add {
  background: #95a5a6;
  font-size: 1.4em;
  color: #333;
  padding: 0.4em 0.7em 0.3em;
  border-radius: 90px;
  margin: 1em auto;
}
.button-add:hover,
.button-add:focus {
  background: #2ecc71;
}

.button-del,
.button-flashing {
  background: #c0392b;
}

.button-del  {
  position: absolute;
  right: -54px;
  font-size: 1.4em;
  padding: 0.6em 0.8em;
  margin-top: -1px;
}

.button-del:hover,
.button-flashing:hover {
  background: #e74c3c;
}

.button-cancel {
  position: absolute;
  top: 0;
  right: 0;
  margin: 5px;
  color: #FFF;
  z-index: 90;
}

#dtf-toolbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  overflow: hidden;
  background: #FFF;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
  height: 3em;
}

#dtf-toolbar:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  box-shadow: inset 0 5px 5px rgba(0,0,0,0.2);
  width: 100%;
  z-index: 1;
  height: 0.5em;
}

#dtf-toolbar button:after {
  font-family: FontAwesome;
  font-size: 1.3em;
  padding-left: 0.6em;
}

#saveDraft:after { content: '\f0c7'; }
#validateBtn:after { content: '\f00c'; }
#resumeBtn:after { content: '\f021'; }
#dtf-content-mode:after { content: '\f044'; }
#dtf-layout-mode:after { content: '\f009'; }
#undoBtn:after { content: '\f112'; }

#saveDraft { margin-right: 0.3em; }

.btn-green {
  background: #00BC62;
  float: right;
}

.btn-green .fa-floppy-o {
  font-size: 1.5em;
}

.btn-orange {
  background: #FF622C;
  float: right;
  margin-left: 0.3em;
}

.btn-green:hover { background: #00ef7d; }

.btn-orange:hover { background: #ff885f; }

.toolbarVisible { padding-top: 3.5em; }


/* ==========================================================================
2 = Layout
========================================================================== */

.body-scalabled {
  height: 100%;
  padding-bottom: 30em;
}

.body-scalabled .toolbarVisible {
  padding-top: 10.5em;
}

.body-scalabled body {
  transform: scale(0.5);
}

.body-scalabled .button-del {
  font-size: 3em;
  right: -115px;
}

.body-scalabled #dtf-toolbar {
  margin-left: -50%;
  height: 7em;
  width: 200%;
}

.body-scalabled #dtf-toolbar button {
  font-size: 2em;
}

#dtf-layout-mode {
  background: #2980b9;
  padding: 1em;
}

#dtf-layout-mode:hover { background: #3498db; }

#dtf-toolbar button {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #FFF;
  -webkit-transition: all 0.5s all;
  -o-transition: all 0.5s all;
  transition: all 0.5s all;
  height: 100%;
  font-size: 0.8em;
}

#dtf-content-mode { background: #f39c12; }

#dtf-content-mode .fa {
  font-size: 1.5em;
  margin-left: 0.3em;
}

#dtf-content-mode:hover { background: #f1c40f; }

#undoBtn {
  padding: 1em 1.5em;
  background: #c0392b;
}

#undoBtn .fa { font-size: 1.2em; }

#undoBtn:hover { background: #e74c3c; }

.dtf-deletion-border { border: 1px solid #bdc3c7; }

/* ==========================================================================
3 = Change class
========================================================================== */

.dtf-change button {
  color: #FFF;
  padding: 0.4em;
}

.dtf-change-element {
  padding: 1.5em 0;
  overflow: hidden;
}

.dtf-background {
  margin:0 0 1em 3%;
  width: 45.5%;
  float: left;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 1.5em;
  height: 4em;
  background-position: right bottom;
  background-repeat: no-repeat;
  background-size: contain!important;
  box-shadow: 0 0 2px rgba(0,0,0,0.5);
  border: 1px solid #FFF;
  cursor: pointer;
}

.dtf-background.active,
.dtf-background:hover {
  border-color: #999;
}

.dtf-changeable { border-bottom: 0; }

.dtf-change {
  border: 1px solid #bdc3c7;
  border-top: 0;
  margin-bottom: 2em;
  background: #FFF;
}

.dtf-change h2 {
  padding-top: 1.5em;
  font-size: 1em;
  text-transform: uppercase;
  text-align: center;
}


/* ==========================================================================
4 = dtf catalog
========================================================================== */

.dtf-catalog {
  overflow: hidden;
  padding: 1.5em;
  background: #FFF;
}
/* ... */

